--- a/src/site/notes/Inbox/テストページの作成.md
+++ b/src/site/notes/Inbox/テストページの作成.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/inbox//","tags":"gardenEntry","dgHomeLink":true,"dgPassFrontmatter":false}
+{"dg-publish":true,"permalink":"/inbox//","dgHomeLink":true,"dgPassFrontmatter":false}
 ---
 
 
