--- a/src/site/notes/Inbox/2022-08-18.md
+++ b/src/site/notes/Inbox/2022-08-18.md
@@ -15,4 +15,5 @@
 - 素材のサイトの紹介動画(5本)
 
 ##  請求書
-![[2022-8-18_株式会社デザコア様_請求書.pdf]]
+[2022-8-18_株式会社デザコア様_請求書](https://drive.google.com/open?id=1DH5NxstVUE6vVczCgHMJFR3CrrwM1b_4&authuser=izu.0622h%40gmail.com&usp=drive_fs)
+
